force-app/main/default/objects/OpportunityContactRole/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <formula>Opportunity.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CloseDate</label>
    <type>Date</type>
</CustomField>