force-app/main/default/objects/OpportunityContactRole/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;CASESAFEID(OpportunityId), Opportunity.Name,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Link</label>
    <type>Text</type>
</CustomField>