force-app/main/default/objects/OpportunityContactRole/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <formula>Text(Opportunity.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>